--- a/css/styles.css
+++ b/css/styles.css
@@ -133,68 +133,58 @@
 
 /* Contact form */
 
-.custom-contact-form  {
+.custom-contact-form {
   letter-spacing: 2px;
-  padding-bottom: 100px
+  padding-bottom: 100px;
 }
-.custom-contact-form a{
+.custom-contact-form a {
   color: #fff;
   text-decoration: none;
 }
 
-
 @media (max-width: 575.98px) {
-
-  .custom-contact-form .maps iframe{
+  .custom-contact-form .maps iframe {
     width: 100%;
     height: 250px;
   }
- }
-
+}
 
 @media (min-width: 576px) {
-
-  .custom-contact-form .maps iframe{
-     width: 100%;
-     height: 250px;
-   }
- }
+  .custom-contact-form .maps iframe {
+    width: 100%;
+    height: 250px;
+  }
+}
 
 @media (min-width: 768px) {
-
-
-  .custom-contact-form .maps iframe{
+  .custom-contact-form .maps iframe {
     width: 100%;
     height: 450px;
   }
 }
 
 @media (min-width: 992px) {
-
-  .custom-contact-form .maps iframe{
-     width: 100%;
-     height: 500px;
-   }
+  .custom-contact-form .maps iframe {
+    width: 100%;
+    height: 500px;
+  }
 }
 
-
-#author a{
+#author a {
   color: #fff;
   text-decoration: none;
-    
 }
 
 .text-end {
   text-align: end;
 }
 
-.custom-contact-form input[type=text], 
-.custom-contact-form input[type=number]
-{
+.custom-contact-form input[type="text"],
+.custom-contact-form input[type="number"] {
   display: block;
   width: 100%;
-  height: calc(1.5em + .75rem + 2px);
-  padding: .375rem .75rem;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -202,8 +192,8 @@
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .google-reviews + section {
@@ -213,7 +203,7 @@
 select.form-select {
   display: block;
   width: 100%;
-  padding: .375rem 2.25rem .375rem .75rem;
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
   font-size: 1rem;
   font-weight: 400;
@@ -222,11 +212,11 @@ select.form-select {
   background-color: #fff;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-position: right .75rem center;
+  background-position: right 0.75rem center;
   background-size: 16px 12px;
   border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -235,14 +225,14 @@ select.form-select {
 .form-select:focus {
   border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 
 .custom-select {
   background-color: #fff;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
-  background-position: right .75rem center;
+  background-position: right 0.75rem center;
   background-size: 16px 12px;
   cursor: pointer;
   position: relative;
@@ -299,11 +289,11 @@ label {
   box-sizing: content-box;
   width: 1em;
   height: 1em;
-  padding: .25em .25em;
+  padding: 0.25em 0.25em;
   color: var(--bs-btn-close-color);
   background: transparent var(--bs-btn-close-bg) center/1em auto no-repeat;
   border: 0;
-  border-radius: .375rem;
+  border-radius: 0.375rem;
   opacity: var(--bs-btn-close-opacity);
 }
 
@@ -337,4 +327,8 @@ a:not([href]).mybtn:hover {
 
 #logo_a:hover {
   text-decoration: none;
+}
+
+form .row .form-group {
+  margin-bottom: 0;
 }
