--- a/css/styles.css
+++ b/css/styles.css
@@ -332,3 +332,19 @@ a:not([href]).mybtn:hover {
 form .row .form-group {
   margin-bottom: 0;
 }
+
+.navbar-collapse li a.link {
+  color: #000;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.team-box {
+  height: inherit;
+}
+
+@media screen and (min-width: 1024px) {
+  .team-box {
+    height: 290px;
+  }
+}
