--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,12 @@ section.steps {
   direction: ltr;
 }
 
+.bg-image-wrapper .img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .background-overlay {
   background-color: transparent;
   background-image: linear-gradient(180deg, #00000078 18%, #000000 100%);
